# NeuralGI

./: .gitignore  .gitmodules  README.md
CoopVecInfer/: .gitignore  CMakeLists.txt
CoopVecInfer/mlp_infer/: CMakeLists.txt  DeviceUtils.cpp  DeviceUtils.h  GraphicsResources.cpp  GraphicsResources.h  main.cpp  shaders.cfg  shaders.hlsl
Plugins/VLMDataExporter/: VLMDataExporter.uplugin
Plugins/VLMDataExporter/Source/VLMDataExporter/: VLMDataExporter.Build.cs
Plugins/VLMDataExporter/Source/VLMDataExporter/Private/: VLMDataExporter.cpp  VLMDataExporterCommands.cpp  VLMDataExporterStyle.cpp
Plugins/VLMDataExporter/Source/VLMDataExporter/Public/: FVLMData.h  VLMDataExporter.h  VLMDataExporterCommands.h  VLMDataExporterStyle.h
Train/: README.md  config.py  dataset.py  eval.py  exr_compare.py  exr_util.py  manual_inference.py  run.py  save_model.py  train.py  train_dataset_maker.py
